fix content-warning text overlap in certain cases

--- a/src/app/components/stream/status/status.component.scss
+++ b/src/app/components/stream/status/status.component.scss
@@ -123,9 +123,9 @@
     }
     &__content-warning {
         min-height: 80px;
-        display: block; // border: 1px solid greenyellow;
+        display: block;
         margin: 0 10px 0 $avatar-column-space;
-        padding: 3px 5px 3px 5px;
+        padding: 3px 5px 12px 5px;
         
         text-decoration: none;
         text-align: center;
